--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.5.4",
     "prisma": "^6.17.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
